--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: tesswcs
 nav:
     - Home: README.md
+    - Tutorial: tutorial.md
 theme:
   name: "material"
   icon:
@@ -12,18 +13,6 @@ theme:
 repo_url: https://github.com/christinahedges/tesswcs
 plugins:
   - search
-  - mkdocs-jupyter:
-      execute: False
-  - mkdocstrings:
-      default_handler: python
-      handlers:
-        python:
-          selection:
-            docstring_style: "numpy"
-          rendering:
-            show_source: false
-      watch:
-        - src/scatterbrain
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
