--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ black = "^23.11.0"
 isort = "^5.12.0"
 flake8 = "^6.1.0"
 jupyterlab = "^4.0.9"
+line-profiler = "^4.1.2"
+astroquery = "^0.4.6"
+pandas = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core"]
