--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
-        poetry install
+        poetry install --with dev
     - name: Run flake8
       run: |
         make flake8
