--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "docs/README.md"
 packages = [{include = "tesswcs", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 astropy = "^5.3.4"
 rich = "^13.7.0"
 tqdm = "^4.66.1"
