--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "tesswcs"
-version = "1.1.8"
+version = "1.1.9"
 description = ""
 authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
 readme = "docs/README.md"
 packages = [{include = "tesswcs", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-astropy = "^5.3.4"
+python = ">=3.9,<4.0"
+astropy = ">=5.0"
 rich = "^13.7.0"
 tqdm = "^4.66.1"
 matplotlib = "^3.8.2"
