--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tesswcs"
-version = "1.1.9"
+version = "1.2.0"
 description = ""
 authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
 readme = "docs/README.md"
@@ -9,10 +9,10 @@ packages = [{include = "tesswcs", from = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 astropy = ">=5.0"
-rich = "^13.7.0"
 tqdm = "^4.66.1"
 matplotlib = "^3.8.2"
 toml = "^0.10.2"
+tesscube = { version = "^1.0.4", optional = true }
 
 [tool.poetry.group.dev]
 optional = true
@@ -31,6 +31,10 @@ line-profiler = "^4.1.2"
 astroquery = "^0.4.6"
 pandas = "^2.1.3"
 
+[tool.poetry.extras]
+database = ["tesscube"] 
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
