--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,6 +1,10 @@
 name: black
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch: # Allows manual triggering
+
 
 jobs:
   lint:
