--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,6 +1,10 @@
 name: flake8
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch: # Allows manual triggering
+
 
 jobs:
   build:
