update auto action [skip ci]

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -94,3 +94,16 @@ jobs:
       run: |
         poetry build
         poetry publish
+
+    - name: Create GitHub Release
+      if: env.changes == 'true'
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ steps.bump-version.outputs.new_version }}
+        release_name: Release v${{ steps.bump-version.outputs.new_version }}
+        body: |
+          Automated release for version v${{ steps.bump-version.outputs.new_version }}.
+        draft: false
+        prerelease: false
