--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tesswcs"
-version = "1.3.1"
+version = "1.4.0"
 description = ""
 authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
 readme = "docs/README.md"
@@ -9,8 +9,8 @@ packages = [{include = "tesswcs", from = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 astropy = ">=5.0"
-tqdm = "^4.66.1"
-matplotlib = "^3.8.2"
+tqdm = ">=4.66.1"
+matplotlib = ">=3.8.2"
 tesscube = { version = "^1.0.4", optional = true }
 
 [tool.poetry.group.dev]
