--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tesswcs"
-version = "1.5.0"
+version = "1.6.0"
 description = ""
 authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
 readme = "docs/README.md"
@@ -11,7 +11,9 @@ python = ">=3.9,<4.0"
 astropy = ">=5.0"
 tqdm = ">=4.66.1"
 matplotlib = ">=3.8.2"
-tesscube = { version = "^1.0.4", optional = true }
+tesscube = ">=1.2.0"
+astroquery = ">=0.4.9"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev]
 optional = true
